# AWS-lambda-sqs-dlq

./: .gitignore  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  initial-prompt.md  pyproject.toml  test-ci-locally.sh  test_imports.py  test_synth.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: ADR-001-architecture-decisions.md  DEPLOYMENT.md  architecture-improvements.md  cost-analysis.md  interview-crib-notes.md
functions/common/: utils.py
functions/events/: handler.py
functions/idempotency/: handler.py
functions/ingest/: handler.py
functions/processor/: handler.py
functions/publish/: handler.py
functions/redrive/: handler.py
functions/validate/: handler.py
functions/worker/: handler.py
infra/: app.py  cdk.json  requirements.txt  test_imports.py
infra/cdk_constructs/: alarms.py  event_bus.py  queue_stack_proposed.py
infra/constructs/: __init__.py  dashboard.py  enhanced_monitoring.py  event_bus.py  kms_key.py  lambda_fn.py  queue_stack_proposed.py  sqs_with_dlq.py
infra/stacks/: __init__.py  api_stack.py  functions_stack.py  observability_stack.py  queue_stack.py  simple_api_stack.py
infra/tests/: test_functions.py  test_queue.py  test_synth.py
ops/gamedays/: schema-evolution-gameday.md
ops/queries/cloudwatch-insights/: error-analysis.txt  performance-analysis.txt
ops/runbooks/: dlq-depth-alarm.md
scripts/: deploy.sh  test-pipeline.sh
